@@ -11,6 +11,8 @@
 - redo the css
 - check if p4a_validate can be ported to ZF
 - import latest fckeditor
+- php5ize db_navigator
+- check db for '' to replace the addslash
 
 2.99.0
 - Zend Framework 1.0.3 was added
@@ -122,7 +124,7 @@
 - P4A_Field::unsetMaxThumbnailSize() method was removed, use setMaxThumbnailSize(null) to disable the feature
 - P4A_Field::setRichTextareaToolbar(), getRichTextareaToolbar() and getRichTextareaToolbars() were removed because unsupported by fckeditor
 - P4A::init() method was removed
-- helpers, P4A_Box, P4A_Object, P4A_Button, P4A_Collection, P4A_Field, P4A_Array_Source, P4A_DB_Source, P4A_Widget, P4A_Mask, P4A, P4A_Frame, P4A_Fieldset, P4A_Label, P4A_Line, P4A_Link, P4A_Menu, P4A_Menu_Item were php5ized
+- helpers, P4A_Box, P4A_Object, P4A_Button, P4A_Collection, P4A_Field, P4A_Array_Source, P4A_DB_Source, P4A_Widget, P4A_Mask, P4A, P4A_Frame, P4A_Fieldset, P4A_Label, P4A_Line, P4A_Link, P4A_Menu, P4A_Menu_Item and P4A_Canvas were php5ized
 - P4A_Widget::composeStringClassStyle() was rewritten and renamed to composeStringClass()
 - P4A_Toolbar default size is now 32
 - P4A_Button now inherits height from toolbar (just done via CSS)
